<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".CodeActivity" >

    <EditText
        android:id="@+id/rombo4"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/rombo3"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/rombo2"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/rombo1"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/txtClave"
        android:layout_width="189dp"
        android:layout_height="37dp"
        android:text="@string/txtClave"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="311dp"
        android:layout_height="44dp"
        android:layout_marginEnd="48dp"
        android:text="@string/txtMensaje"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <Button
        android:id="@+id/btnEntrar2"
        android:layout_width="238dp"
        android:layout_height="51dp"
        android:backgroundTint="#E91E63"
        android:text="@string/btnEntrar2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

</androidx.constraintlayout.widget.ConstraintLayout>