<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CajeroActivity">

    <TextView
        android:id="@+id/txtMensajeCajero"
        android:layout_width="311dp"
        android:layout_height="44dp"
        android:layout_marginEnd="48dp"
        android:text="@string/txtMensajeCajero"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/rombo11"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:cursorVisible="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <EditText
        android:id="@+id/rombo10"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:cursorVisible="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <EditText
        android:id="@+id/rombo9"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:cursorVisible="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <EditText
        android:id="@+id/rombo12"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:background="@drawable/rombo"
        android:ems="10"
        android:inputType="number"
        android:maxLength="1"
        android:cursorVisible="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <EditText
        android:id="@+id/etCuantoRetirar"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:background="#3EAFABAB"
        android:ems="10"
        android:hint="@string/etCuantoRetirar"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792"
        tools:ignore="NotSibling" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/logobancolombia" />

    <Button
        android:id="@+id/btnCajero"
        android:layout_width="155dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/btnCajero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCuantoRetirar" />
</androidx.constraintlayout.widget.ConstraintLayout>